2005-04-17  Leonard den Ottolander <leonard * den ottolander nl>

	* syntax/eiffel.syntax: dos2unix; removed redundant cooledit
	colour definitions.
	* syntax/perl.syntax: Removed redundant cooledit definitions.
	* syntax/php.syntax: ' ' and " " context fixes.
	* syntax/syntax.syntax: Removed 2 duplicate lines.

2005-04-16  Roland Illig  <roland.illig@gmx.de>

	* lib/mc.ext.in: Recognize either *.udeb or *.deb as Debian
	packages. Fixes Savannah patch #3899.

2005-04-14  Leonard den Ottolander <leonard * den ottolander nl>

	* syntax/Syntax: Catch Makefiles with capitals in the extension.

2005-04-14  Roland Illig  <roland.illig@gmx.de>

	* doc/mc.1.in (Internal File Viewer): Rewrote some documentation.
	Removed the paragraph about the growing buffers. It's generally
	uninteresting to users.

2005-04-13  Roland Illig  <roland.illig@gmx.de>

	* configure.ac: Add -DNDEBUG to CPPFLAGS if the maintainer mode
	is not enabled.

2005-03-19  Pavel Roskin  <proski@gnu.org>

	* acinclude.m4 (MC_WITH_SLANG): Partly restore original order of
	checks and add a comment with a warning.
	From Pavel S. Shirshov <me@pavelsh.pp.ru>

	* acinclude.m4 (MC_WITH_SLANG): Reorder checks.  Move termcap
	checks ...
	(MC_SLANG_TERMCAP): ... here.
	(MC_SLANG_PRIVATE): Check if private functions are available.
	It's not the case on Debian unstable.

2005-03-19  Pavel S. Shirshov  <me@pavelsh.pp.ru>

	* syntax/idl.syntax: Add syntax file for the CORBA idl.
	From Ian Zagorskih <ianzag@megasignal.com>
	* syntax/lua.syntax: Add syntax file for the LUA programming language.
	From Mike Gorchak  <mike@malva.ua>
	* syntax/Syntax: Add syntax file for CORBA idl and lua.
	* syntax/Makefile.am: Likewise.
	* mc.qpg.in: Likewise.
	* NEWS: Likewise.

2005-03-19  Pavel Roskin  <proski@gnu.org>

	* acinclude.m4 (MC_WITH_SLANG): Define HAVE_SYSTEM_SLANG after
	all fallbacks so it shows whether we are using system S-Lang.
	* configure.ac: Remove USE_INCLUDED_SLANG, since it's now fully