@@ -1,3 +1,7 @@
+2005-04-22  Roland Illig  <roland.illig@gmx.de>
+
+	* acinclude.m4: Added macro MC_ARG_ENABLE_DEVELOPER_MODE.
+
 2005-04-17  Leonard den Ottolander <leonard * den ottolander nl>
 
 	* syntax/eiffel.syntax: dos2unix; removed redundant cooledit
